--- a/netlify.toml
+++ b/netlify.toml
@@ -2,20 +2,19 @@
 # https://docs.netlify.com/configure-builds/file-based-configuration/
 
 [build]
-  command = "npm run build"
+  # Use npm; swap to pnpm example below if you prefer
+  command = "npm ci && npm run build"
   publish = ".next"
+  functions = ".netlify/functions"   # <-- belongs under [build]
 
-# Next.js Runtime
 [build.environment]
   NEXT_PRIVATE_TARGET = "server"
 
-# Redirects and rewrites
-[[redirects]]
-  from = "/*"
-  to = "/.netlify/functions/___netlify-handler"
-  status = 200
+# Netlify Next.js runtime plugin (handles SSR, routes, redirects)
+[[plugins]]
+  package = "@netlify/plugin-nextjs"
 
-# Headers for security
+# SECURITY HEADERS
 [[headers]]
   for = "/*"
   [headers.values]
@@ -25,7 +24,7 @@
     Referrer-Policy = "strict-origin-when-cross-origin"
     Permissions-Policy = "camera=(), microphone=(), geolocation=()"
 
-# Cache static assets
+# CACHE HEADERS
 [[headers]]
   for = "/_next/static/*"
   [headers.values]
@@ -36,12 +35,7 @@
   [headers.values]
     Cache-Control = "public, max-age=31536000, immutable"
 
-# API routes with longer timeout for AI processing
-[[functions]]
-  directory = ".netlify/functions"
+# GLOBAL FUNCTIONS SETTINGS (single object, not [[functions]])
+[functions]
   node_bundler = "esbuild"
-
-# Increase timeout for AI extraction endpoint (max 26 seconds on free tier, 900 on pro)
-[[functions]]
-  functions = ["___netlify-handler"]
   included_files = [".next/**"]
