fix: update netlify.toml to use npm install
- Changed from npm ci to npm install (no package-lock.json exists)
- Updated pnpm-lock.yaml
- Fixes Netlify build error

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,10 +2,9 @@
 # https://docs.netlify.com/configure-builds/file-based-configuration/
 
 [build]
-  # Use npm; swap to pnpm example below if you prefer
-  command = "npm ci && npm run build"
+  command = "npm install && npm run build"
   publish = ".next"
-  functions = ".netlify/functions"   # <-- belongs under [build]
+  functions = ".netlify/functions"
 
 [build.environment]
   NEXT_PRIVATE_TARGET = "server"
