fix: remove .next/** from function included_files to fix 250MB limit
- The .next/** inclusion caused function bundle to exceed Netlify's 250MB limit
- @netlify/plugin-nextjs handles Next.js deployment automatically
- Removed included_files array to let plugin manage it
- Fixes: The function exceeds the maximum size of 250 MB

--- a/netlify.toml
+++ b/netlify.toml
@@ -39,4 +39,5 @@
 # GLOBAL FUNCTIONS SETTINGS (single object, not [[functions]])
 [functions]
   node_bundler = "esbuild"
-  included_files = [".next/**"]
+  # Don't include .next/** - it's too large and handled by Next.js plugin
+  included_files = []
