--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "private": true,
   "scripts": {
     "build": "next build",
+    "deploy": "HOME=$PWD/.netlify-home netlify deploy --build",
+    "deploy:prod": "HOME=$PWD/.netlify-home netlify deploy --build --prod",
     "dev": "next dev",
     "lint": "next lint",
+    "netlify:init": "HOME=$PWD/.netlify-home netlify init",
+    "netlify:login": "HOME=$PWD/.netlify-home netlify login",
+    "netlify:status": "HOME=$PWD/.netlify-home netlify status",
     "start": "next start"
   },
   "dependencies": {
@@ -73,6 +78,7 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "netlify-cli": "^23.11.0",
     "postcss": "^8.5",
     "supabase": "^2.58.5",
     "tailwindcss": "^3.4.17",
