debug(proxy-audio): surface upstream status/body and log exceptions for diagnosis

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "netlify:init": "HOME=$PWD/.netlify-home netlify init",
     "netlify:login": "HOME=$PWD/.netlify-home netlify login",
     "netlify:status": "HOME=$PWD/.netlify-home netlify status",
-    "start": "next start"
+    "start": "next start",
+    "server": "node server/index.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
@@ -48,15 +49,20 @@
     "@uploadthing/react": "^7.3.3",
     "@upstash/redis": "latest",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "latest",
+    "cors": "^2.8.5",
     "crypto": "latest",
     "date-fns": "4.1.0",
+    "dotenv": "^16.6.1",
     "embla-carousel-react": "latest",
+    "express": "^4.21.2",
     "input-otp": "latest",
     "jszip": "latest",
     "lucide-react": "^0.454.0",
+    "multer": "^2.0.2",
     "next": "15.2.4",
     "next-themes": "latest",
     "react": "^19",
