--- a/package.json
+++ b/package.json
@@ -63,18 +63,18 @@
     "jszip": "latest",
     "lucide-react": "^0.454.0",
     "multer": "^2.0.2",
-    "next": "15.2.4",
+    "next": "^16.0.10",
     "next-themes": "latest",
-    "react": "^19",
+    "react": "^19.0.0",
     "react-day-picker": "latest",
-    "react-dom": "^19",
+    "react-dom": "^19.0.0",
     "react-hook-form": "latest",
     "react-is": "^19.2.0",
     "react-resizable-panels": "latest",
     "recharts": "latest",
-    "stripe": "^16.6.0",
     "replicate": "latest",
     "sonner": "latest",
+    "stripe": "^16.6.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.7.4",
